--- a/2-add-pagelevel-content/5-write-clear-link-text/start/index.html
+++ b/2-add-pagelevel-content/5-write-clear-link-text/start/index.html
@@ -307,7 +307,7 @@
 
 								<!-- Link -->
 								<a class="btn btn-link stretched-link text-reset" href="#">
-									Shop Now <i class="fe fe-arrow-right ml-2"></i>
+									Bags Collection Shop Now <i class="fe fe-arrow-right ml-2"></i>
 								</a>
 								</div>
 							</div>
