--- a/2-add-pagelevel-content/6-group-related-links/start/index.html
+++ b/2-add-pagelevel-content/6-group-related-links/start/index.html
@@ -1171,10 +1171,12 @@
 						<h2>Support</h2>
 						</div>
 
-						<div><a class="text-gray-300 " href="#">Contact Us</a></div>
-						<div><a class="text-gray-300 " href="#">FAQs</a></div>
-						<div><a class="text-gray-300 " href="#">Size Guide</a></div>
-						<div><a class="text-gray-300 " href="#">Shipping & Returns</a></div>
+						<ul>
+  <li><a class="text-gray-300 " href="#">Contact Us</a></li>
+  <li><a class="text-gray-300 " href="#">FAQs</a></li>
+  <li><a class="text-gray-300 " href="#">Size Guide</a></li>
+  <li><a class="text-gray-300 " href="#">Shipping &amp; Returns</a></li>
+</ul>
 
 					</div>
 					<div class="col-6 col-sm">
