--- a/3-improve-structure-of-webform/1-add-labels-controls/start/index.html
+++ b/3-improve-structure-of-webform/1-add-labels-controls/start/index.html
@@ -138,10 +138,9 @@
 								</select>					
 							</div>
 												
-							<label>First Name</label> 
-							<div class="form-group">
-								<input type="text" id="first" class="form-control" autocomplete="off">
-							</div>
+							<label for="first">First Name</label> 
+<input type="text" id="first" autocomplete="off">
+							
 
 							<label>Last Name</label> 
 							<div class="form-group">
