--- a/3-improve-structure-of-webform/2-identify-data-formats/start/index.html
+++ b/3-improve-structure-of-webform/2-identify-data-formats/start/index.html
@@ -142,8 +142,8 @@
 							<div class="form-group">
 								<input type="text" id="first" class="form-control" autocomplete="off">
 							</div>
+							<label for="last">Last Name (20 character maximum)</label>
 
-							<label for="last">Last Name</label> 
 							<div class="form-group">
 								<input type="text" id="last" class="form-control" autocomplete="off" maxlength="40">
 							</div>
