--- a/3-improve-structure-of-webform/3-highlight-required-input/start/index.html
+++ b/3-improve-structure-of-webform/3-highlight-required-input/start/index.html
@@ -138,7 +138,7 @@
 								</select>					
 							</div>
 												
-							<label for="first">First Name</label> 
+							<label for="first">First Name (required)</label> 
 							<div class="form-group">
 								<input type="text" id="first" class="form-control" autocomplete="off">
 							</div>
@@ -148,7 +148,7 @@
 								<input type="text" id="last" class="form-control" autocomplete="off" maxlength="40">
 							</div>
 							
-							<label for="email">Email Address</label> 
+							<label for="email">Email Address (required)</label> 
 							<div class="form-group">
 								<input type="text" id="email" class="form-control" autocomplete="off">
 							</div>
