--- a/3-improve-structure-of-webform/6-use-validation-summary/start/index.html
+++ b/3-improve-structure-of-webform/6-use-validation-summary/start/index.html
@@ -137,7 +137,18 @@
 									<option value="Dame">Dame</option>
 								</select>					
 							</div>
-												
+								<div class="alert alert-danger">
+<h2 class="alert-heading">Errors have occurred</h2>
+<hr>
+
+  <ul>
+    <li>Title is blank</li>
+    <li>First Name is blank</li>
+    <li>Last Name is blank</li>
+    <li>Email Address is blank</li>
+  </ul>
+
+</div>				
 							<label for="first">First Name (required) <span class="inline-alert alert-primary">First Name is empty</span></label>
 							<div class="form-group">
 								<input type="text" id="first" class="form-control" autocomplete="off">
